new readme file

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ID_G3N3R4T0R
 
-generate a false identity to create a blog, an account on a site.
-Become an other persone to surf the web with your secret identity.
+generate a false identity to create a blog or create an account on a site.
+Become an other persone to surf the web with your secret identity. ;)
 
-Project inspired by the work of Geoffrey sleep.
+Project inspired by the work of Geoffrey Dorme.
 url: www.graphisme.fr
